--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>QR Code Generator - Free, Fast, and Private</title>
-    <meta name="description" content="Generate QR codes instantly for URLs, text, phone numbers, Wi-Fi credentials, and more.No tracking, completely free and privacy-focused." />
-    <meta name="keywords" content="qr code generator, qr code, free qr code, qr generator, qr code maker" />
+    <title>Free QR Code Generator Online</title>
+    <meta name="description" content="Create QR Codes instantly for URLs, contact details, or Wi-Fi. 100% Free and Fast.">
+    <meta name="keywords" content="QR code generator, free QR code, QR online, create QR code, qrcodegens">  
   </head>
   <body>
     <div id="root"></div>
